src/test/deca/syntax/invalid/synt/negative_infinity.deca
// Description:
//    erreur du a un arrondi à l'infini
//    syntaxiquement incorrect
//
// Resultats:
//    Ligne 13 : rule literal failed predicate: {$tree != null}?
//
// Historique:
//    cree le 18/01/2023
//

{
    float x = -3.4028236e38;
}